fixed #628 JFXTreeTableCell/JFXTreeTableColumn Alignment

--- a/jfoenix/src/main/resources/css/controls/jfx-tree-table-view.css
+++ b/jfoenix/src/main/resources/css/controls/jfx-tree-table-view.css
@@ -70,8 +70,8 @@
 
 .tree-table-view .tree-table-cell {
     -fx-border-width: 0 0 0 0;
-    -fx-padding: 16 0 16 0;
-    -fx-alignment: top-center;
+    -fx-pref-height: 48px;
+    -fx-alignment: center-left;
 }
 
 .tree-table-view .column-overlay {
